<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gh4"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frame2"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/set1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/greenhouse1"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/button1"
                android:text="@string/Greenhouse1"
                android:textColor="#e8e8e8" />

            <Button
                android:id="@+id/greenhouse2"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/button2"
                android:text="@string/Greenhouse2"
                android:textColor="#e8e8e8" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/frame1"
        app:layout_constraintBottom_toTopOf="@+id/menu">

        <LinearLayout
                android:id="@+id/set2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/greenhouse3"
                    android:layout_width="wrap_content"
                    android:textAllCaps="false"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/button3"
                    android:text="@string/Greenhouse3"
                    android:textColor="#e8e8e8" />

                <Button
                    android:id="@+id/greenhouse4"
                    android:layout_width="wrap_content"
                    android:textAllCaps="false"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/button4"
                    android:text="@string/Greenhouse4"
                    android:textColor="#e8e8e8" />

            </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:textAllCaps="false"
            android:text="@string/Home" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:textAllCaps="false"
            android:text="@string/Settings" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>