<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gh1"
    tools:context=".Details">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:backgroundTint="@color/acik"
            android:src="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/ghName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/Greenhouse1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/brightColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/button2"
            app:srcCompat="@android:drawable/stat_notify_sync" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/frame2"
        >


        <TextView
            android:id="@+id/celciusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celciusSign"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/brightColor"
            android:textSize="110sp"
            android:textStyle="bold" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/frame1"
        app:layout_constraintBottom_toTopOf="@+id/frame3"
        >

        <TextView
            android:id="@+id/setForLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crntlySet"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/brightColor"
            android:textSize="25sp"
            android:textStyle="bold" />

    </FrameLayout>



    <LinearLayout
        android:id="@+id/frame3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0.8"
                android:labelFor="@id/slideBarLabel"
                android:layerType="software"
                android:max="50"
                android:progress="1"
                android:progressTint="#B11E1E"
                android:thumbTint="@color/button2"
                android:scaleY="2" />

            <TextView
                android:id="@+id/slideBarLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:text="@string/XX"
                android:textAlignment="center"
                android:textColor="@color/brightColor"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/applyButton"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/applyCmd" />

        <Button
            android:id="@+id/shutButton"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/kahve"
            android:text="@string/shutDwn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>